[package]
name = "scolor"
version = "7.0.0"
edition = "2021"
description = "Simple ansi colors"
repository = "https://github.com/sigmaSd/scolor"
license = "MIT"
keywords = ["color", "ansi", "terminal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []
zero-cost = []
